# Evals_App

./: .dockerignore  .env  .gitignore  AI_Eval_Platform_Execution_Plan.md  AI_Evaluation_Platform_Plan.md  DEVELOPMENT_LOG.md  Evals_input_batch_summary_20250608_155319.csv  Help (Question-answer) - new_df.csv  Makefile  README.md  batch_summary_20250608_155319.csv  docker-compose.yml  evaluate_overviews.py  evaluation_results.csv  evaluation_results_full.csv  evaluation_results_parallel.csv  pyproject.toml  test_sheet_5cases.csv
.github/workflows/: ci.yml
frontend/: Dockerfile  package.json
infra/docker/postgres/: init.sql
services/api/: Dockerfile  deps.py  main.py
services/api/core/: config.py  exceptions.py  logging_config.py  middleware.py  security.py
services/api/crud/: base.py  dataset.py  project.py  result.py  run.py  user.py
services/api/db/: models.py  session.py
services/api/routers/: __init__.py  datasets.py  health.py  projects.py  results.py  runs.py
services/api/schemas/: dataset.py  project.py  result.py  run.py
services/worker/: Dockerfile  main.py  tasks.py
tests/: conftest.py  test_api.py
